--- a/src/app/Dashboard/dashboard/dashboard.component.html
+++ b/src/app/Dashboard/dashboard/dashboard.component.html
@@ -24,10 +24,13 @@
   <!-- Overview section  -->
 
   <app-overview></app-overview>
-
+  <div class="wrapper d-flex justify-content-between">
   <!-- Todays Task List  -->
-  <app-todaytasklist></app-todaytasklist>
+  <app-todaytasklist>
+  </app-todaytasklist>
   <!-- List Name  -->
+<app-listname></app-listname>
+</div>  
 
-  <app-listname></app-listname>
+ 
 </section>
