--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -77,7 +77,7 @@
         >
 
         <a
-          style="text-align: right; color: #800000"
+          
           class="forget-pass"
           routerLink="/forgotpassword"
           >{{passforget}}</a
@@ -98,7 +98,7 @@
       </mat-progress-spinner></mat-icon>
         </button>
       </div>
-      <p style="text-align: center">
+      <p class="creataccc" >
         {{noregister}}
         <a style="text-align: center; color: #800000" class="create-acc"
         routerLink="/register"
