--- a/src/app/Dashboard/todaytasklist/todaytasklist.component.html
+++ b/src/app/Dashboard/todaytasklist/todaytasklist.component.html
@@ -1,30 +1,33 @@
 <!-- Todays Task  -->
 
-<div class="todaystaskwrapper ">
-  <h1 class="title">Title</h1>
+<div class="todaystaskwrapper">
+  <h1 class="title">Task</h1>
   <div class="row d-flex flex-row justify-content-between flex-wrap">
     <div
-      class="titlecard p-4 d-flex justify-content-start flex-row overview-card"
+      class="titlecards p-4 d-flex justify-content-start flex-row overview-card"
     >
       <div class="tasks">
-        <div class="taskName d-flex justify-content-between">
-          <h3 class="tasknametitle">
-            <mat-checkbox></mat-checkbox> &nbsp; &nbsp;Test Task
-          </h3>
-          <button
-            class="btn"
-            mat-raised-button
-            disabled
-            style="background-color: #f7d6d0; color: red"
-          >
-            High
-          </button>
+        <div class="container" *ngFor="let items of taskData">
+          <div class="taskName d-flex justify-content-between">
+            <h3 class="tasknametitle">
+              <mat-checkbox></mat-checkbox> &nbsp; &nbsp;{{ items.TaskName }}
+            </h3>
+            <button
+              class="btn"
+              mat-raised-button
+              disabled
+              style="background-color: #f7d6d0; color: red"
+            >
+             <p> {{ items.Priority }} </p>
+            </button>
+          </div>
+          <h4 class="mx-4">{{ items.ListName }}</h4>
+          <mat-divider></mat-divider>
+          <br />
+          <br />
         </div>
-        <h4 class="mx-4">Personal</h4>
-        <mat-divider></mat-divider>
       </div>
     </div>
   </div>
+
 </div>
-
-
