--- a/src/app/login/SCSS/_inputfield.scss
+++ b/src/app/login/SCSS/_inputfield.scss
@@ -67,3 +67,16 @@ input:invalid {
   .passworderror {
     color: $valerr;
   }
+
+@media screen and(max-width:700px) {
+  input[type="text"],
+input[type="password"] {
+  padding: $fiftenPx $twentPX;
+  margin-top: $eightPX;
+  margin-bottom: $fiftenPx;
+  border: 1px solid #ccc;
+  border-radius: $eightPX;
+  box-sizing: $bordBox;
+  width: 198px;
+}
+}
