Feat: users.ts file added, created user interface

--- a/src/app/password/signuppassword/signuppassword.component.html
+++ b/src/app/password/signuppassword/signuppassword.component.html
@@ -105,7 +105,7 @@
       </div>
 
       <div class="login-button">
-        <button class="cta-btn" mat-raised-button color="primary" type="submit" >
+        <button class="cta-btn" mat-raised-button color="primary" type="submit" routerLink="" >
           Sign Up
         </button>
       </div>
