--- a/src/app/Modal/modal/modal.component.html
+++ b/src/app/Modal/modal/modal.component.html
@@ -5,7 +5,7 @@
 <div class="modal-body">
   <div class="wrapper d-flex justify-content-between">
     <form
-      [formGroup]="NewListTask"
+      [formGroup]="newListtask"
       #newlistform="ngForm"
       (ngSubmit)="onSubmit()"
     >
@@ -32,7 +32,7 @@
     Close
   </button>
   <button
-    [disabled]="!NewListTask.valid"
+    [disabled]="!newListtask.valid"
     class="btn btn-primary"
     (click)="onSubmit()"
   >
