--- a/src/app/forgot_password/forgotpassword.component.html
+++ b/src/app/forgot_password/forgotpassword.component.html
@@ -6,13 +6,13 @@
       (ngSubmit)="(resetemail.value)"
     >
       <h1 class="title">{{ title }}</h1>
-      <h2>{{ logintoyAcc }}</h2>
-      <p class="subtitle">{{ emailregi }}</p>
+      <h2>{{ loginText }}</h2>
+      <p class="subtitle">{{ emailRegistrataion }}</p>
       <br />
       <div class="password">
         <div class="iconsinput">
           <p for="email">
-            <a>{{ passlabel }}</a>
+            <a>{{ emailLabel }}</a>
           </p>
           <input
             type="text"
@@ -26,7 +26,7 @@
           />
           <i class="fas fa-user" aria-hidden="true"></i>
 
-          <div class="tick" *ngIf="resetEmailval.email.valid; else elseBlock">
+          <div class="tick" *ngIf="resetEmailvalue.email.valid; else elseBlock">
             <i class="fas fa-check" aria-hidden="true"></i>
           </div>
           <ng-template #elseBlock>
@@ -37,9 +37,9 @@
         </div>
         <span
           class="emailerror"
-          *ngIf="resetEmailval.email.invalid && resetEmailval.email.touched"
+          *ngIf="resetEmailvalue.email.invalid && resetEmailvalue.email.touched"
         >
-          {{ emailerrmsg }}</span
+          {{ emailErrormsg }}</span
         >
 
         <div class="send-button">
